--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 @font-face {
   font-family: "Circular";
   src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot");
-  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix") format("embedded-opentype"),
-    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff") format("woff"),
+  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix") format("embedded-opentype"), url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff") format("woff"),
     url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
@@ -186,10 +185,6 @@ ul li.active {
 
 ul li.active a {
   margin-left: 28px;
-}
-
-.nav-links {
-  min-height: 60%;
 }
 
 button {
